remove css from iaso app, fix small overflow issue

--- a/hat/assets/css/_reset.scss
+++ b/hat/assets/css/_reset.scss
@@ -3,11 +3,6 @@
    License: none (public domain)
 */
 
-body {
-  height: 100vh;
-  overflow: hidden;
-}
-
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -35,6 +30,8 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
   line-height: 1;
+  height: 100vh;
+  overflow: hidden;
 }
 
 blockquote, q {
